--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "slim/slim": "^3.12",
     "ramsey/uuid": "^3.8",
     "slim/twig-view": "^2.5",
-    "deoliveiralucas/copy-object-attributes-values": "^1.0"
+    "deoliveiralucas/copy-object-attributes-values": "^1.0",
+    "slim/flash": "^0.4.0"
   },
   "autoload": {
     "psr-4": {
